    accounting for difference between 2*<new|V(old)|new> 
    and <new|V(old)|new> + <old|V(new)|old>  (see "fock3" term) 
    SCDM and localized exchange is now compatible with ecutfock
    Localized exchange can deal with virtual orbitals (empty bands)
    (Ivan Carnimeo)

  * Spin-polarized X3LYP (experimental)

Problems fixed in development version:

  * LDA+U for spin-orbit (kind=1) was crashing for one k-point, trying to read
    data not previously saved (noticed by Christof Wolf, Feb 8, 2018)

  * ibrav =-13 wasn't documented and did not recognize the correct parameter
    cosBC (noticed by Jose' Conesa, Jan 26, 2018)

  * Yet another problem with the final scf step in a vc-relax calculation: if
    restarted from an interrupted calculation, the final step was trying to
    read the charge density with a different number of G-vectors (Jan 23, 2018)

  * CP with LDA+U: the choice of the LDA+U manifolds from atomic wavefunctions
    was sometimes not working properly due to a missing check (Jan 22, 2018)

  * pw2bgw.x fixed, courtesy G. Samsonidze (Jan.16, 2018)

  * Band parallelization was broken in one of the last commits
    just before v.6.2.1 (Dec.23, 2017)

  * TDDFPT in "lr_addus_dvpsi.f90" had a bug for systems with USPP
    and more than 2 atoms (Dec.22, 2017) (Oleksandr Motornyi, 
    Michele Raynaud, Iurii Timrov, Nathalie Vast, Andrea Dal Corso)

  * Phonons with images wasn't working in v.6.2.1 with old PP files
    containing "&" in the header section (Dec.20, 2017)

  * PWscf in "manypw" mode wasn't working due to a bad IF (Dec.12, 2017)

Incompatible changes in development version:

  * various subroutines computing gradients and similar quantities using FFTs
    have been harmonized and collected into Modules/gradutils.f90

  * subroutine "ggen" split into two subroutines: "ggen" takes care of
    G-vectors for the FFT grid only, "ggens" for the subgrid only

  * FFT interfaces fwfft, invfft now accept only 'Rho', 'Wave', 'tgWave'.