@@ -55,10 +55,13 @@ add_paw_to_deeq.o : ../../Modules/paw_variables.o
 add_paw_to_deeq.o : ../../Modules/uspp.o
 add_paw_to_deeq.o : pwcom.o
 add_qexsd_step.o : ../../Modules/cell_base.o
+add_qexsd_step.o : ../../Modules/constants.o
 add_qexsd_step.o : ../../Modules/control_flags.o
 add_qexsd_step.o : ../../Modules/fcp_variables.o
 add_qexsd_step.o : ../../Modules/ions_base.o
+add_qexsd_step.o : ../../Modules/kind.o
 add_qexsd_step.o : ../../Modules/qexsd.o
+add_qexsd_step.o : extfield.o
 add_qexsd_step.o : pwcom.o
 add_vhub_to_deeq.o : ../../Modules/ions_base.o
 add_vhub_to_deeq.o : ../../Modules/kind.o
@@ -183,6 +186,7 @@ bp_c_phase.o : ../../Modules/ions_base.o
 bp_c_phase.o : ../../Modules/kind.o
 bp_c_phase.o : ../../Modules/mp_bands.o
 bp_c_phase.o : ../../Modules/noncol.o
+bp_c_phase.o : ../../Modules/qes_libs.o
 bp_c_phase.o : ../../Modules/qexsd.o
 bp_c_phase.o : ../../Modules/recvec.o
 bp_c_phase.o : ../../Modules/uspp.o
@@ -1115,29 +1119,21 @@ mix_rho.o : ../../Modules/wavefunctions.o
 mix_rho.o : ../../UtilXlib/mp.o
 mix_rho.o : pwcom.o
 mix_rho.o : scf_mod.o
-move_ions.o : ../../FFTXlib/fft_types.o
 move_ions.o : ../../Modules/basic_algebra_routines.o
 move_ions.o : ../../Modules/bfgs_module.o
 move_ions.o : ../../Modules/cell_base.o
 move_ions.o : ../../Modules/constants.o
 move_ions.o : ../../Modules/control_flags.o
 move_ions.o : ../../Modules/fcp_variables.o
-move_ions.o : ../../Modules/fft_base.o
 move_ions.o : ../../Modules/io_files.o
 move_ions.o : ../../Modules/io_global.o
 move_ions.o : ../../Modules/ions_base.o
 move_ions.o : ../../Modules/kind.o
-move_ions.o : ../../Modules/mp_bands.o
 move_ions.o : ../../Modules/mp_images.o
-move_ions.o : ../../Modules/noncol.o
-move_ions.o : ../../Modules/recvec.o
 move_ions.o : ../../UtilXlib/mp.o
-move_ions.o : atomic_wfc_mod.o
 move_ions.o : dynamics_module.o
 move_ions.o : fcp.o
-move_ions.o : newd.o
 move_ions.o : pwcom.o
-move_ions.o : scf_mod.o
 move_ions.o : symm_base.o
 n_plane_waves.o : ../../Modules/kind.o
 n_plane_waves.o : ../../Modules/mp_pools.o
@@ -1568,6 +1564,7 @@ pw_restart_new.o : ../../Modules/io_files.o
 pw_restart_new.o : ../../Modules/io_global.o
 pw_restart_new.o : ../../Modules/ions_base.o
 pw_restart_new.o : ../../Modules/kernel_table.o
+pw_restart_new.o : ../../Modules/kind.o
 pw_restart_new.o : ../../Modules/mm_dispersion.o
 pw_restart_new.o : ../../Modules/mp_bands.o
 pw_restart_new.o : ../../Modules/mp_global.o
@@ -1754,16 +1751,25 @@ run_driver.o : ../../Modules/mp_global.o
 run_driver.o : ../../Modules/parameters.o
 run_driver.o : pwcom.o
 run_driver.o : update_pot.o
+run_pwscf.o : ../../FFTXlib/fft_types.o
 run_pwscf.o : ../../Modules/cell_base.o
 run_pwscf.o : ../../Modules/check_stop.o
 run_pwscf.o : ../../Modules/command_line_options.o
+run_pwscf.o : ../../Modules/constants.o
 run_pwscf.o : ../../Modules/control_flags.o
 run_pwscf.o : ../../Modules/fft_base.o
 run_pwscf.o : ../../Modules/io_global.o
+run_pwscf.o : ../../Modules/ions_base.o
+run_pwscf.o : ../../Modules/kind.o
+run_pwscf.o : ../../Modules/mp_bands.o
 run_pwscf.o : ../../Modules/mp_images.o
+run_pwscf.o : ../../Modules/noncol.o
 run_pwscf.o : ../../Modules/parameters.o
 run_pwscf.o : ../../Modules/qexsd.o
 run_pwscf.o : ../../Modules/qmmm.o
+run_pwscf.o : ../../Modules/recvec.o
+run_pwscf.o : atomic_wfc_mod.o
+run_pwscf.o : newd.o
 run_pwscf.o : pwcom.o
 run_pwscf.o : scf_mod.o
 run_pwscf.o : update_pot.o
